# viper-

./: .FENV.txt  .dockerignore  .env  .env.backup.secure  .env.example  .env.template  .gitignore  .vault_tokens  CHANGELOG.md  DEMO_FINAL_SUCCESS.py  EASY_SETUP.md  FINAL_SYSTEM_COMPLETION_REPORT.md  FIXED_MARGIN_IMPLEMENTATION.md  FIX_SUMMARY_$3_ENTRY_LOSS.md  GET_STARTED.md  INSTALLATION.md  ISSUE_RESOLUTION_REPORT.md  LIVE_TRADING_READINESS_REPORT.md  LIVE_TRADING_STATUS.md  LIVE_TRADING_SYSTEM_README.md  MCP_BRAIN_SYSTEM_README.md  MCP_INTEGRATION_README.md  README.md  SETUP_COMPLETE.md  STANDALONE_TRADER_README.md  START_HERE.md  SYSTEM_FINALIZATION_REPORT.md  SYSTEM_READY.md  TROUBLESHOOTING.md  VIPER_COMPLETION_REPORT.txt  advanced_strategy_optimizer.py  advanced_trend_detector.py  ai_ml_optimizer.py  bitget_unlimited_trader.py  complete_system_mcp.py  comprehensive_backtester.py  comprehensive_debug.py  comprehensive_strategy_backtester.py  comprehensive_verification_system.py  create_github_repo.py  (+92 more)
backups/: backup_report_20250829_223852.md
comprehensive_test_results/: comprehensive_test_all_pairs_1756500064.json  intermediate_batch_0_1756500063.json  intermediate_batch_0_1756500064.json  intermediate_batch_0_pairs_10_1756500335.json  intermediate_batch_0_pairs_20_1756500338.json  intermediate_batch_1_pairs_30_1756500341.json  intermediate_batch_1_pairs_40_1756500345.json  intermediate_batch_2_pairs_50_1756500349.json  intermediate_batch_3_pairs_60_1756500353.json  intermediate_batch_3_pairs_70_1756500358.json
config/: docker-compose.symlink.yml  logstash.conf  optimal_mcp_config.py  prometheus.yml  redis.conf
demo_results/: mcp_demo_results_20250830_063141.json  mcp_demo_results_20250830_063529.json
docker/: docker-compose.override.yml  docker-compose.yml  enhanced-scanner.dockerfile
docs/: 25x_leverage_pairs_MCP.md  50X_LEVERAGE_SCAN_REPORT.md  ADVANCED_ENTRY_OPTIMIZATIONS.md  AI_PERFORMANCE_RULES.md  AI_SETUP_GUIDE.md  API_SETUP_README.md  BEST_ENTRY_POINT_SYSTEM.md  CHANGELOG.md  CHANGELOG_BRAIN.md  COMPLETE_WORKFLOW_README.md  CONFIGURATION_GUIDE.md  (+21 more)
(+382 files in other folders)
